--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <title>My TO-DO's | Angular.js</title>
 
-    <!-- Bootstrap Core CSS -->
+    <!-- Bootstrap Core CSS & some css styling -->
     <link href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.5/journal/bootstrap.min.css" rel="stylesheet"/>
     <style>
             .strike {
@@ -67,6 +67,7 @@
               <ul class="nav navbar-nav">
                 <li><a href="#">About<span class="sr-only">(current)</span></a></li>
                 <li><a href="https://github.com/yoni-g">github</a></li>
+                <!-- to be added later on...-->
                 <!--<li class="dropdown">
                   <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
                   <ul class="dropdown-menu" role="menu">
