changed view folder name

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 </div>
 <div class="includs">
         <!-- task's list table -->
-        <div ng-include="'includes/tasktable.html'"></div>
+        <div ng-include="'views/tasktable.html'"></div>
         <!-- Task's form -->
         
   <div class="col-lg-6">
